<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_summa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_summa"
            android:layout_margin="@dimen/margin_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_summa_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_peoples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_peoples"
            android:layout_margin="@dimen/margin_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_summa">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_peoples_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            style="@style/Widget.DividingTheBill.Divider"
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_peoples" />

        <TextView
            android:id="@+id/tip_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_20"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            android:text="@string/tip_size"/>

        <RadioGroup
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@+id/tip_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:checkedButton="@id/change0">
            <RadioButton
                android:id="@+id/change0"
                android:text="@string/tips_0"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/change10"
                android:text="@string/tips_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/change15"
                android:text="@string/tips_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/change20"
                android:text="@string/tips_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </RadioGroup>


        <View
            style="@style/Widget.DividingTheBill.Divider"
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_margin="@dimen/margin_20"
            android:src="@drawable/memo_pad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/total_per_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:hint="@string/total_per_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_per_person_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:textColor="@color/orange_700" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/calculate"
            android:text="@string/calculate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_per_person"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>